Add an image for landing page

--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -18,10 +18,11 @@
   </header>
 
   <main id="main-container">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img class="main-image" src="https://user-images.githubusercontent.com/6410412/96574151-0cc88280-130a-11eb-94b2-132b6860f91f.png" />
   </main>
 
   <script defer src="../src/ts/init.ts"></script>
 </body>
 
 </html>
+
