--- a/app/src/scss/index.scss
+++ b/app/src/scss/index.scss
@@ -1,13 +1,5 @@
-#main-emoji-container {
-  max-width: 350px;
+.main-image {
+  max-width: 700px;
   width: 100%;
 }
 
-#main-emoji {
-  width: 100%;
-}
-
-#github-heatmap {
-  width: 100%;
-  max-width: 800px;
-}
