Add avatar image

--- a/app/templates/navigation.ejs
+++ b/app/templates/navigation.ejs
@@ -1,4 +1,8 @@
 <nav>
+  <a href="/about.html">
+    <img class="navigation-avatar" src="https://avatars0.githubusercontent.com/u/71625979?s=400&u=6aab72bfe1549e3936d85d63e4075a57d09665fb&v=4" />
+  </a>
+
   <a class="logo-link" href="/">
     <h1><%- blogTitle %></h1>
     <span><%- blogSubtitle %></span>
@@ -10,3 +14,4 @@
     <a id="articles" class="info-link" href="/articles.html">📚Articles</a>
   </small>
 </nav>
+
