--- a/app/src/scss/navigation.scss
+++ b/app/src/scss/navigation.scss
@@ -34,4 +34,11 @@
     color: white;
     background-color: black;
   }
+
+  .navigation-avatar {
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+  }
 }
+
